--- a/css/style.scss
+++ b/css/style.scss
@@ -57,7 +57,7 @@ html {
 }
 
 body {
-  background: url('../images/background3.jpg');
+  background: url('../images/background.jpg');
   background-attachment: fixed;
   background-position: center;
   background-color: #3b3b46;
